--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,26 @@
     display: none;
 };
 
+body {
+    align-content: center;
+};
+
 h1 {
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 };
+
+.alphabet {
+    font-weight: 600;
+};
+
+.correct {
+    font-weight: 700;
+    color: grey;
+};
+
+.incorrect {
+    font-weight: 700;
+    color: red;
+};
+
