--- a/css/style.css
+++ b/css/style.css
@@ -2,26 +2,16 @@
     display: none;
 };
 
-body {
-    align-content: center;
-};
-
-h1 {
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-};
-
 .alphabet {
-    font-weight: 600;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 700;
 };
 
 .correct {
-    font-weight: 700;
     color: grey;
 };
 
 .incorrect {
-    font-weight: 700;
     color: red;
 };
 
